--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 <footer>
     <div>
         <h2>GS</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorem illum totam libero praesentium odio ipsa ullam iusto architecto quae, quas reprehenderit amet laboriosam. Corrupti vitae eum rerum repellendus quos?</p>
     </div>
-    <div>
+    <div class="barrafooter">
         <nav>
             <ul>
                 <li class="navegar-1"><a href="#">Inicio</a></li>
@@ -52,10 +51,10 @@
             </ul>
         </nav>
     </div>
-    <div>
-        <a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram"></a>
-        <a href="https://www.facebook.com/" target="_blank"><img src="" alt="facebook"></a>
-        <a href="https://x.com/?logout=1722093455397" target="_blank"><img src="" alt="x"></a>
+    <div class="logoRedes">
+        <a href="https://www.instagram.com/" target="_blank"><img src="file:///C:/Users/samue/Downloads/instagram-svgrepo-com.svg" alt="instagram"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img src="file:///C:/Users/samue/Downloads/facebook-svgrepo-com.svg" alt="facebook"></a>
+        <a href="https://x.com/?logout=1722093455397" target="_blank"><img src="file:///C:/Users/samue/Downloads/twitter-svgrepo-com%20(1).svg" alt="x"></a>
     </div>
 </footer>
 
