--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -27,7 +27,25 @@
     
 </main>
 <footer>
-
+    <div>
+        <h2>GS</h2>
+    </div>
+    <div class="barrafooter">
+        <nav>
+            <ul>
+                <li class="navegar-1"><a href="../index.html">Inicio</a></li>
+                <li class="navegar-2"><a href="./guitarras.html">Guitarras</a></li>
+                <li class="navegar-3"><a href="./pedales.html">Pedales</a></li>
+                <li class="navegar-4"><a href="./accesorios.html">Accesotios</a></li>
+                <li class="navegar-5"><a href="#">Contactos</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="logoRedes">
+        <a href="https://www.instagram.com/" target="_blank"><img src="file:///C:/Users/samue/Downloads/instagram-svgrepo-com.svg" alt="instagram"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img src="file:///C:/Users/samue/Downloads/facebook-svgrepo-com.svg" alt="facebook"></a>
+        <a href="https://x.com/?logout=1722093455397" target="_blank"><img src="file:///C:/Users/samue/Downloads/twitter-svgrepo-com%20(1).svg" alt="x"></a>
+    </div>
 </footer>
 
 <body>
